--- a/lab-01.Rmd
+++ b/lab-01.Rmd
@@ -36,7 +36,7 @@ _Create a frequency table of the number of tourist attractions in the data set b
 ```{r Ex_a}
 # Delete the comment '#' symbol at the start of the next line and complete the code. 
 
-#visitors %>% count(_____)
+visitors %>% count(region)
 ```
 
 ### Exercise b.
@@ -46,14 +46,14 @@ _Create a frequency table by `admission` and `setting`._
 ```{r Ex_b}
 # Delete the comment '#' symbol at the start of the next line and complete the code.
 
-#visitors %>% count(_____, _____)
+visitors %>% count(admission, setting)
 ```
 
 
 ## Question 2
 
 _What are the variable data types?_
-Numerical, Character
+Numeric, Character
 ```{r Q2_part1}
 class(visitors$n_2022)
 ```
@@ -76,9 +76,8 @@ visitors %>% arrange(desc(n_2022))
 
 _What are the top 10 most visited attractions in 2021?_
 ```{r Ex_c}
-#visitors %>% 
-#  arrange(____(____)) %>%
-#  head(n = ____)
+visitors %>% arrange(desc(n_2021)) %>%
+head(n = 10)
 ```
 
 ## Question 4
@@ -95,17 +94,16 @@ visitors %>% filter(attraction == "National Museum of Scotland")
 _Which attraction had exactly 565,772 visitors in 2022?_
 
 ```{r Ex_d}
-#visitors %>% filter(___ == ____)
+visitors %>% filter(n_2022 == 565772)
 ```
 
 ### Exercise e.
 
 _How many attraction had more than 1 million visitors in 2022?_
-
+22
 ```{r Ex_e}
-#visitors %>% 
-#  filter(____) %>%
-#  count()
+visitors %>% 
+filter(n_2022>=1e06) %>%count()
 ```
 
 ## Question 5
@@ -126,13 +124,9 @@ visitors %>%
 ### Exercise f.
 
 _How many attractions had between 50,000 and 100,000 visitors in 2022?_
-
+50
 ```{r Ex_f}
-#visitors %>% 
-#  ____(
-#    ______,
-#    ______ ) %>%
-#  count()
+visitors %>% filter(n_2022 >= 5e04, n_2022 <= 1e05) %>%count()
 ```
 
 ### Exercise g.
@@ -140,9 +134,9 @@ _How many attractions had between 50,000 and 100,000 visitors in 2022?_
 _How many regions have more than 50 tourist attraction in the data set? (Hint: You will need to tabulate the data before filtering.)_
 
 ```{r Ex_g}
-#visitors %>% 
-#  _____(region) %>%
-#  filter(______)
+visitors %>% 
+filter(region) %>%
+filter(attraction>=50)
 ```
 
 
